KAFKA-19758: Preferably use the connector classloader when loading pl… (#20675)
…ugins if it has the correct version

Reviewers: Greg Harris <gharris1727@gmail.com>, Fiore Mario Vitale <mvitale86@gmail.com>, Snehashis Pal <snehashisp1995@gmail.com>